--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -360,16 +360,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/coronavirus-covid-19/coronavirus-vaccination/">Book a coronavirus vaccination - NHS</a></li>
-<li><a href="https://www.gov.ukhttp//www.arun.gov.uk/">Arun District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.walthamforest.gov.uk/">London Borough of Waltham Forest Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.renfrewshire.gov.uk">Renfrewshire Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.rother.gov.uk">Rother District Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.walsall.gov.uk/">Walsall Metropolitan Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.telford.gov.uk">Telford &amp; Wrekin Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.north-ayrshire.gov.uk">North Ayrshire Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.adur-worthing.gov.uk/">Adur &amp; Worthing Councils</a></li>
-<li><a href="https://www.gov.ukhttp//www.reigate-banstead.gov.uk/">Reigate and Banstead Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.northumberland.gov.uk">Northumberland County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.boroughofpoole.com">Borough of Poole Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.hants.gov.uk">Hampshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.lambeth.gov.uk">London Borough of Lambeth Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.brent.gov.uk">London Borough of Brent Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.lbhf.gov.uk/">London Borough of Hammersmith and Fulham Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.ards-council.gov.uk/">Ards Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.broadland.gov.uk">Broadland District Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
