--- a/manual/data-gov-uk-supporting-ckan.html
+++ b/manual/data-gov-uk-supporting-ckan.html
@@ -230,6 +230,13 @@
 </div>
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/214a8de7f86d225de4a3a781abdd6d9703e58839">5 Jan 2021</a>
 </div>
