--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--38">Turks and Caicos post-cabinet meeting statement</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/171845.es-419">G8: Oportunidades para todos, incluyendo Guatemala</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/279743.es">Gran Bretaña: 15 historias para 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/240607.es-419">Los exámenes TOEFL o TEIC no se aceptarán para tramitar visas de estudio</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/230636.ja">英国外務省の年次人権報告書で日本の死刑制度を解説</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/176281.ur">برطانوی ہائی کمشنر کی جانب سے پاکستانیوں کے لیے عید مبارک کا پیغام</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/289211.pt">CARIOCAS GLOBAIS</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/changes-to-passport-services-for-british-nationals--5">Changes to passport services for British nationals</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/289214.es-419">Discurso de Su Majestad la Reina Isabel II con motivo de la Visita de Estado del Presidente de México, Enrique Peña Nieto</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/259782.ja">英国ショッピングウィーク　SNSキャンペーン第一弾を開催</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--10">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/priority-visas-to-be-opened-up-to-other-categories-for-south-india">Priority visas to be opened up to other categories for South India</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/197760.ar">السفير البريطاني في لبنان: آمل أن يغير حزب الله اتجاهه عن مصالح إيران والأسد</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--31">Turks and Caicos Islands post Cabinet meeting statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/embassy-closure--3">Embassy closure</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--6">Advice for British nationals in Chennai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uks-minister-for-international-security-strategy-visits-ghana--2">UK’s Minister for International Security Strategy Visits Ghana</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/284564.es-419">Embajada Británica otorgará 10 becas para estudiar inglés en línea</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/226243.pt">Consulado Britânico promove conferência sobre petróleo e gás</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/211747.bg">Дейвид Лидингтън оцени високо спасяването на българските евреи</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
