--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -444,16 +444,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.whitehorsedc.gov.uk" class="govuk-link">Vale of White Horse District Council</a></li>
-      <li><a href="http://www.adur-worthing.gov.uk/" class="govuk-link">Adur &amp; Worthing Councils</a></li>
-      <li><a href="http://www.copelandbc.gov.uk/" class="govuk-link">Copeland Borough Council</a></li>
       <li><a href="http://www.glasgow.gov.uk" class="govuk-link">Glasgow City Council</a></li>
-      <li><a href="https://www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/" class="govuk-link">Talking therapy - NHS</a></li>
-      <li><a href="http://www.castlereagh.gov.uk" class="govuk-link">Castlereagh Borough Council</a></li>
-      <li><a href="http://www.hertsmere.gov.uk/" class="govuk-link">Hertsmere Borough Council</a></li>
       <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
       <li><a href="http://www.lambeth.gov.uk" class="govuk-link">London Borough of Lambeth Council</a></li>
-      <li><a href="http://www.aylesburyvaledc.gov.uk/" class="govuk-link">Aylesbury Vale District Council</a></li>
+      <li><a href="https://covid19.nhs.uk/" class="govuk-link">Get the NHS COVID-19 app</a></li>
+      <li><a href="https://www.gov.scot/coronavirus-covid-19/" class="govuk-link">Coronavirus (COVID-19) in Scotland - gov.scot</a></li>
+      <li><a href="http://www.adur-worthing.gov.uk/" class="govuk-link">Adur &amp; Worthing Councils</a></li>
+      <li><a href="http://www.hyndburnbc.gov.uk" class="govuk-link">Hyndburn Borough Council</a></li>
+      <li><a href="http://www.hambleton.gov.uk/" class="govuk-link">Hambleton District Council</a></li>
+      <li><a href="http://www.police.uk/" class="govuk-link">Crime in your area - Police UK</a></li>
+      <li><a href="http://www.whitehorsedc.gov.uk" class="govuk-link">Vale of White Horse District Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
