--- a/document-types/international_development_fund.html
+++ b/document-types/international_development_fund.html
@@ -331,7 +331,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: international_development_fund</h1>
 
-  <p>There are <strong>38</strong> pages with document type
+  <p>There are <strong>37</strong> pages with document type
 &lsquo;international_development_fund&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -365,13 +365,13 @@
 <li><a href="https://www.gov.uk/international-development-funding/sustainable-manufacturing-and-environmental-pollution-smep-programme-reducing-plastics-pollution-in-sub-saharan-africa-and-south-asia-research-and-innovation">Sustainable Manufacturing and Environmental Pollution (SMEP) Programme - Reducing plastics pollution in Sub-Saharan Africa and South Asia </a></li>
 <li><a href="https://www.gov.uk/international-development-funding/user-perspectives-new-trends-in-digital-humanitarian-action-research-and-innovation">User Perspectives: new trends in digital humanitarian action</a></li>
 <li><a href="https://www.gov.uk/international-development-funding/uk-aid-direct">UK Aid Direct</a></li>
-<li><a href="https://www.gov.uk/international-development-funding/gsma-innovation-fund-for-digital-urban-services-research-and-innovation">GSMA Innovation Fund for Digital Urban Services (Research and Innovation)</a></li>
 <li><a href="https://www.gov.uk/international-development-funding/global-innovation-fund">Global Innovation Fund</a></li>
 <li><a href="https://www.gov.uk/international-development-funding/dfid-funded-small-charities-challenge-fund-sccf">Small Charities Challenge Fund (SCCF)</a></li>
 <li><a href="https://www.gov.uk/international-development-funding/uk-aid-connect">UK Aid Connect</a></li>
 <li><a href="https://www.gov.uk/international-development-funding/connecting-classrooms">Connecting Classrooms through Global Learning</a></li>
 <li><a href="https://www.gov.uk/international-development-funding/assistive-technology-impact-fund-research-and-innovation">Assistive Technology Impact Fund</a></li>
 <li><a href="https://www.gov.uk/international-development-funding/africa-enterprise-challenge-fund">Africa Enterprise Challenge Fund </a></li>
+<li><a href="https://www.gov.uk/international-development-funding/nihr-global-health-research-groups-research-and-innovation">NIHR Global Health Research Groups</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=international_development_fund&amp;count=10">Source query from Search API</a></p>
 
