--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -360,16 +360,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
+<li><a href="https://www.gov.ukhttp//www.whitehorsedc.gov.uk">Vale of White Horse District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.adur-worthing.gov.uk/">Adur &amp; Worthing Councils</a></li>
+<li><a href="https://www.gov.ukhttp//www.copelandbc.gov.uk/">Copeland Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.glasgow.gov.uk">Glasgow City Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/">Talking therapy - NHS</a></li>
+<li><a href="https://www.gov.ukhttp//www.castlereagh.gov.uk">Castlereagh Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.hertsmere.gov.uk/">Hertsmere Borough Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.hants.gov.uk">Hampshire County Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.lambeth.gov.uk">London Borough of Lambeth Council</a></li>
-<li><a href="https://www.gov.ukhttps//covid19.nhs.uk/">Get the NHS COVID-19 app</a></li>
-<li><a href="https://www.gov.ukhttps//www.gov.scot/coronavirus-covid-19/">Coronavirus (COVID-19) in Scotland - gov.scot</a></li>
-<li><a href="https://www.gov.ukhttp//www.reading.gov.uk/">Reading Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.nfdc.gov.uk">New Forest District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.glasgow.gov.uk">Glasgow City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.south-ayrshire.gov.uk">South Ayrshire Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.lewes-eastbourne.gov.uk">Lewes District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bournemouth.gov.uk">Bournemouth Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.aylesburyvaledc.gov.uk/">Aylesbury Vale District Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
